--- a/storage-transfer/package.json
+++ b/storage-transfer/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@google-cloud/storage": "1.3.0",
     "googleapis": "21.3.0",
-    "moment": "2.18.1",
+    "moment": "~>2.19.3",
     "safe-buffer": "5.1.1",
     "yargs": "9.0.1"
   },
